--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -76,3 +76,14 @@
     @apply bg-background text-foreground;
   }
 }
+@layer components{
+  .btn {
+    @apply px-5 py-1 rounded-2xl font-medium inline-flex items-center justify-center tracking-tighter;
+  }
+  .btn-primary {
+    @apply bg-black text-white
+  }
+  .btn-text {
+    @apply text-black bg-transparent
+  }
+}
